--- a/index.html
+++ b/index.html
@@ -1,58 +1,187 @@
 <!doctype html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Janciesielczyk.GitHub.io by janciesielczyk</title>
+<html class="no-js" lang="">
 
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/github-light.css">
-    <meta name="viewport" content="width=device-width">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-  </head>
-  <body>
-    <div class="wrapper">
-      <header>
-        <h1>Janciesielczyk.GitHub.io</h1>
-        <p></p>
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
+  <title></title>
+  <meta name="description" content="">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+  <link rel="manifest" href="site.webmanifest">
+  <link rel="apple-touch-icon" href="icon.png">
+  <!-- Place favicon.ico in the root directory -->
+
+  <style>
+		body {
+			font-family: Arial, Helvetica, sans-serif;
+		}
+
+		.participant {
+			display: block;
+			margin-bottom: 15px;
+		}
+
+		.nameInput {
+			margin-right: 15px;
+		}
+
+		.modal {
+			display: flex;
+			position: fixed;
+			left: 0;
+			top: 0;
+			width: 100vw;
+			height: 100vh;
+			background-color: #6d0000;
+			align-items: center;
+			justify-content: center;
+			color: #fff;
+			font-weight: bold;
+			text-align: center;
+			opacity: 0;
+    	pointer-events: none;
+			transition: opacity .3s ease-in-out;
+		}	
+
+		.modal__content {
+			font-size: 3vw;
+		}
+
+		.modal--opened {
+			opacity: 1;
+			pointer-events: all;
+		}
+		
+		.giftFrom {
+			display: block;
+			margin-bottom: 30px;
+			font-size: 6vw;
+		}
+
+		.giftTo {
+			display: block;
+			margin-top: 30px;
+			font-size: 9vw;
+		}
+  </style>
+</head>
+
+<body>
+  <p>Christmas gifts secret draw</p>
+  
+<div id="participants" class="participants">
+	<div class="participant">
+			<input class="nameInput" type="text" />
+	</div>
+</div>  
+<div class="nav">
+  <button id="btnAddName" onClick="addName()">Add name</button>
+  <button id="btnRemoveName" onClick="removeName()">Remove name</button>
+  <button id="btnDraw" onClick="draw()">Draw</button>
+</div>
+<div id="modal" class="modal">
+	<div class="modal__content">
+		<span id="giftFrom" class="giftFrom">Kasia</span>gives a gift to <span id="giftTo" class="giftTo">Janek</span>
+	</div>
+</div>
 
 
-        <p class="view"><a href="https://github.com/janciesielczyk">View My GitHub Profile</a></p>
+	<script src="https://cdn.jsdelivr.net/npm/mersennetwister@0.2.3/src/MersenneTwister.min.js"></script>
+  <script>
 
-      </header>
-      <section>
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+	var results = {};
+	var names = [];
+	var m = new MersenneTwister();
+	
+	function draw() {
+		blockNames();
+		var nameInputs = document.getElementsByClassName('nameInput');
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
+		for (var i=0; i < nameInputs.length; i++) {
+			 results[nameInputs[i].value] = '';
+			 names.push(nameInputs[i].value);
+		}
 
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
+		for (var key in results) {
+			if (results.hasOwnProperty(key)) {
+				var j=0;
+				var drawnIndex;
+				do{
+					j++;
+					drawnIndex = getRandomInt(0, names.length - 1);
+				}
+				while(names[drawnIndex] === key & j < 50);
+				results[key] = names[drawnIndex];
+				names.splice(drawnIndex, 1);
+			}
+		}
+		console.log(results);
+		addResultButtons();
+	}
+	
+	function addName() {
+		var div = document.createElement('div');
+		div.className = 'participant';
+		var input = document.createElement('input');
+		input.type = 'text';
+		input.className = 'nameInput';
+		div.appendChild(input);
+		var namesContainer = document.getElementById('participants');
+		namesContainer.appendChild(div);
+	}
+	
+	function removeName() {
+		var nameInputs = document.getElementsByClassName('nameInput');
+		nameInputs[nameInputs.length-1].remove();
+	}
 
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
+	function blockNames() {
+		var nameInputs = document.getElementsByClassName('nameInput');
 
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
+		for (var i=0; i < nameInputs.length; i++) {
+			nameInputs[i].disabled = true;
+		}
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+		document.getElementById('btnRemoveName').remove();
+		document.getElementById('btnAddName').remove();
+		document.getElementById('btnDraw').remove();
+	}
 
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+	function getRandomInt(min, max) {
+    min = Math.ceil(min);
+    max = Math.floor(max);
+    return Math.floor(m.random() * (max - min + 1)) + min;
+	}
 
-<p>You can <a href="https://help.github.com/articles/basic-writing-and-formatting-syntax/#mentioning-users-and-teams" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+	function addResultButtons() {
+		var nameInputs = document.getElementsByClassName('nameInput');
 
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
+		for (var i=0; i < nameInputs.length; i++) {
+			var button = document.createElement('button');
+			button.onclick = function(e){
+				showResultFor(e.target.previousSibling.value);
+				return false;
+			};
+			button.innerHTML = 'Result';
+			insertAfter(button, nameInputs[i]);
+		}
+	}
 
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
-      </section>
-      <footer>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
-      </footer>
-    </div>
-    <script src="javascripts/scale.fix.js"></script>
-    
-  </body>
+	function showResultFor(name) {
+		document.getElementById('giftFrom').innerHTML = name;
+		document.getElementById('giftTo').innerHTML = results[name];
+		document.getElementById('modal').classList.add('modal--opened');		
+		setTimeout(function(){ 
+			document.getElementById('modal').classList.remove('modal--opened');
+		}, 3000);
+	}
+
+	function insertAfter(newNode, referenceNode) {
+    referenceNode.parentNode.insertBefore(newNode, referenceNode.nextSibling);
+	}
+	
+	</script>
+</body>
+
 </html>
