visual updates & add feature for Kasia

--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
 
 <body>
 	<main class="main">
-		<h1 class="title">Christmas gifts secret draw<br>🎄🎅</h1>
+		<h1 class="title">Christmas gifts secret draw*<br>🎄🎅</h1>
 		<p>Insert names in inputs below:</p>
+		<small>*with special feature for Kasia 😊</small><br>
 	
 		<div id="participants" class="participants">
 			<div class="participant">
@@ -23,15 +24,15 @@
 		</div>  
 
 		<div class="nav">
-			<button id="btnAddName" onClick="addName()">Add name</button>
-			<button id="btnRemoveName" onClick="removeName()">Remove name</button>
-			<button id="btnDraw" onClick="draw()">Draw</button>
+			<button id="btnAddName" onClick="addName()">➕name</button>
+			<button id="btnRemoveName" onClick="removeName()">➖name</button>
+			<button id="btnDraw" onClick="draw()">🔀Draw</button>
 		</div>
 
 		<div id="modal" class="modal">
 			<div class="modal__frame">
 				<div class="modal__content">
-					<span id="giftFrom" class="giftFrom"></span>gives a gift to <span id="giftTo" class="giftTo"></span>
+					<span id="giftFrom" class="giftFrom"></span>gives a gift🎁 to <span id="giftTo" class="giftTo"></span>
 				</div>
 			</div>
 		</div>
