--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 
 <body>
 	<main class="main">
-		<h1 class="title">Christmas gifts secret draw*<br>🎄🎅</h1>
+		<h1 class="title">Christmas gifts secret draw 2019<br>🎄🎅</h1>
 		<p>Insert names in inputs below:</p>
-		<small>*with special feature for Kasia 😊</small><br>
+		<!-- <small>*with special feature for Kasia 😊</small><br> -->
 	
 		<div id="participants" class="participants">
 			<div class="participant">
