--- a/index.html
+++ b/index.html
@@ -21,6 +21,27 @@
 			<div class="participant">
 				<input class="nameInput" type="text" />
 			</div>
+			<div class="participant">
+				<input class="nameInput" type="text" />
+			</div>
+			<div class="participant">
+				<input class="nameInput" type="text" />
+			</div>
+			<div class="participant">
+				<input class="nameInput" type="text" />
+			</div>
+			<div class="participant">
+				<input class="nameInput" type="text" />
+			</div>
+			<div class="participant">
+				<input class="nameInput" type="text" />
+			</div>
+			<div class="participant">
+				<input class="nameInput" type="text" />
+			</div>
+			<div class="participant">
+				<input class="nameInput" type="text" />
+			</div>
 		</div>  
 
 		<div class="nav">
@@ -45,6 +66,6 @@
       emailjs.init("user_s0YhnzFIZ6XW7WYEjrKOK");
    })();
 </script>
-<script src="./app.js?2"></script>
+<script src="./app.js?3"></script>
 </body>
 </html>
