--- a/index.html
+++ b/index.html
@@ -19,28 +19,28 @@
 	
 		<div id="participants" class="participants">
 			<div class="participant">
-				<input class="nameInput" type="text" />
+				<input class="nameInput" type="text" value="Jan"/>
 			</div>
 			<div class="participant">
-				<input class="nameInput" type="text" />
+				<input class="nameInput" type="text" value="Tadeusz"/>
 			</div>
 			<div class="participant">
-				<input class="nameInput" type="text" />
+				<input class="nameInput" type="text" value="Bożena"/>
 			</div>
 			<div class="participant">
-				<input class="nameInput" type="text" />
+				<input class="nameInput" type="text" value="Marek"/>
 			</div>
 			<div class="participant">
-				<input class="nameInput" type="text" />
+				<input class="nameInput" type="text" value="Babcia"/>
 			</div>
 			<div class="participant">
-				<input class="nameInput" type="text" />
+				<input class="nameInput" type="text" value="Sabina"/>
 			</div>
 			<div class="participant">
-				<input class="nameInput" type="text" />
+				<input class="nameInput" type="text" value="Maria"/>
 			</div>
 			<div class="participant">
-				<input class="nameInput" type="text" />
+				<input class="nameInput" type="text" value="Marcin"/>
 			</div>
 		</div>  
 
