--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
 	<main class="main">
-		<h1 class="title">Christmas gifts secret draw 2019<br>🎄🎅</h1>
+		<h1 class="title">Christmas gifts secret draw 2019 fixed<br>🎄🎅</h1>
 		<p>Insert names in inputs below:</p>
 		<!-- <small>*with special feature for Kasia 😊</small><br> -->
 	
@@ -66,6 +66,6 @@
       emailjs.init("user_s0YhnzFIZ6XW7WYEjrKOK");
    })();
 </script>
-<script src="./app.js?5"></script>
+<script src="./app.js?6"></script>
 </body>
 </html>
