--- a/index.html
+++ b/index.html
@@ -13,41 +13,41 @@
 
 <body>
 	<main class="main">
-		<h1 class="title">Christmas gifts secret draw 2019 fixed<br>🎄🎅</h1>
+		<h1 class="title">Christmas gifts secret draw 2020 edition<br>🎄🎅</h1>
 		<p>Insert names in inputs below:</p>
 		<!-- <small>*with special feature for Kasia 😊</small><br> -->
 	
 		<div id="participants" class="participants">
 			<div class="participant">
-				<input class="nameInput" type="text" value="Jan"/>
+				<input class="nameInput" type="text" value="Marcin"/>
 			</div>
 			<div class="participant">
 				<input class="nameInput" type="text" value="Tadeusz"/>
 			</div>
 			<div class="participant">
-				<input class="nameInput" type="text" value="Bożena"/>
+				<input class="nameInput" type="text" value="Babcia"/>
 			</div>
 			<div class="participant">
 				<input class="nameInput" type="text" value="Marek"/>
 			</div>
 			<div class="participant">
-				<input class="nameInput" type="text" value="Babcia"/>
+				<input class="nameInput" type="text" value="Sabina"/>
 			</div>
 			<div class="participant">
-				<input class="nameInput" type="text" value="Sabina"/>
+				<input class="nameInput" type="text" value="Bożena"/>
 			</div>
 			<div class="participant">
 				<input class="nameInput" type="text" value="Maria"/>
 			</div>
 			<div class="participant">
-				<input class="nameInput" type="text" value="Marcin"/>
+				<input class="nameInput" type="text" value="Jan"/>
 			</div>
 		</div>  
 
 		<div class="nav">
 			<button id="btnAddName" onClick="addName()">➕name</button>
 			<button id="btnRemoveName" onClick="removeName()">➖name</button>
-			<button id="btnDraw" onClick="draw()">🔀Draw</button>
+			<button id="btnDraw" onClick="tryDraw()">🔀Draw</button>
 		</div>
 
 		<div id="modal" class="modal">
@@ -66,6 +66,6 @@
       emailjs.init("user_s0YhnzFIZ6XW7WYEjrKOK");
    })();
 </script>
-<script src="./app.js?6"></script>
+<script src="./app.js?8"></script>
 </body>
 </html>
