--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>Christmas gifts secret draw</title>
+  <title>Christmas gifts secret draw 2021</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Roboto" rel="stylesheet">
@@ -13,7 +13,7 @@
 
 <body>
 	<main class="main">
-		<h1 class="title">Christmas gifts secret draw 2020 edition<br>🎄🎅</h1>
+		<h1 class="title">Christmas gifts secret draw 2021 edition<br>🎄🎅</h1>
 		<p>Insert names in inputs below:</p>
 		<!-- <small>*with special feature for Kasia 😊</small><br> -->
 	
@@ -25,7 +25,7 @@
 				<input class="nameInput" type="text" value="Tadeusz"/>
 			</div>
 			<div class="participant">
-				<input class="nameInput" type="text" value="Babcia"/>
+				<input class="nameInput" type="text" value="Jan"/>
 			</div>
 			<div class="participant">
 				<input class="nameInput" type="text" value="Marek"/>
@@ -38,9 +38,6 @@
 			</div>
 			<div class="participant">
 				<input class="nameInput" type="text" value="Maria"/>
-			</div>
-			<div class="participant">
-				<input class="nameInput" type="text" value="Jan"/>
 			</div>
 		</div>  
 
@@ -66,6 +63,6 @@
       emailjs.init("user_s0YhnzFIZ6XW7WYEjrKOK");
    })();
 </script>
-<script src="./app.js?10"></script>
+<script src="./app.js?12"></script>
 </body>
 </html>
