change tip structure

--- a/dec21/tip1/index.html
+++ b/dec21/tip1/index.html
@@ -22,11 +22,13 @@
             color: #fff;
             font-weight: bold;
             font-family: sans-serif;
+            flex-direction: column;
         }
     </style>
   </head>
   <body>
-    <main>
+    <main> 
+        <img src="pig.webp" alt="waving pig">
         <span>Poszukaj w kieszonce na prezent z 7 grudnia!</span>
     </main>
 	<script></script>
