--- a/dec21/tip1/index.html
+++ b/dec21/tip1/index.html
@@ -23,6 +23,7 @@
             font-weight: bold;
             font-family: sans-serif;
             flex-direction: column;
+            font-family: Gloria Hallelujah, sans-serif;
         }
     </style>
   </head>
