--- a/dec24/index.html
+++ b/dec24/index.html
@@ -5,32 +5,141 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>24.12.2022</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap" rel="stylesheet">
     <style>
+        @font-face {
+          font-family: "Gloria Hallelujah";
+          src: url("GloriaHallelujah.woff2") format("woff2");
+        }
         body {
             margin: 0;
             padding: 0;
+            font-family: Gloria Hallelujah, sans-serif;
         }
         main {
-            position: fixed;
+            position: relative;
+            box-sizing: border-box;
             width: 100%;
             height: 100%;
             display: flex;
             justify-content: center;
             align-items: center;
-            background-color: #008037;
-            color: #fff;
+            min-height: 100vh;
+            background-color: #fff;
+            color: #333;
             font-weight: bold;
-            font-family: sans-serif;
             flex-direction: column;
-            font-family: Gloria Hallelujah, sans-serif;
+            text-align: center;
+            padding: 10px;
+            z-index: 1;
+        }
+        .panda {
+          max-height: 30vh;
+          margin-bottom: 1em;
+        }
+        label {
+          margin-top: 1em;
+          margin-bottom: 0.5em;
+        }
+        input {
+          border: 0;
+          background-color: transparent;
+          border-bottom: 1px solid #333;
+          color: #333;
+        }
+        button {
+          border: 2px solid;
+          background: transparent;
+          color: inherit;
+          border-radius: 0.5em;
+          font-family: "Gloria Hallelujah";
+          transition: transform .2s ease;
+        }
+        button:hover {
+          transform: scale(0.8);
+        }
+        .modal {
+          z-index: 10;
+          opacity: 1;
+          position: fixed;
+          box-sizing: border-box;
+          width: 100%;
+          height: 100%;
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          align-items: center;
+          min-height: 100vh;
+          text-align: center;
+          padding: 10px;
+          left: 0;
+          top: 0;
+          color: #fff;
+          transition: transform .5s ease;
+        }
+        .modal-lost {
+          background-color: #d00000;
+          transform: translateY(100%);
+        }
+        .modal-win{
+          background-color: #008037;
+          transform: translateY(-100%);
+        }
+        .modal-open {
+          transform: translateY(0);
         }
     </style>
   </head>
   <body>
-    <main> 
-        <span>Nic tu nie ma!</span>
+    <main>
+        <img class="panda" src="panda11.png" alt="panda" />
+        <span>Dzień dobry!</span><br />
+        <span>
+          Czas już na ostatnią paczkę<br />
+          więc i finalną zagadkę!
+        </span><br />
+        <span>
+          "Co należy do Ciebie, ale inni ludzie używają tego częściej niż Ty?""
+        </span>
+        <label>Odpowiedź:
+          <input id="answer" type="text" />
+        </label>
+        <button id="checkButton" onclick="check()">Sprawdź</button>
     </main>
-	<script></script>
+    <div id="modalWin" class="modal modal-win">
+      <img class="panda" src="panda3.png" alt="panda" />
+      <span>Gratulacje!</span>
+      <span>Poprawna odpowiedź!</span>
+      <span>Czas poszukać prezentu w...</span>
+    </div>
+    <div id="modalLost" class="modal modal-lost">
+      <img class="panda" src="panda2.png" alt="panda" />
+      <span>Zła odpowiedź...</span><br />
+      <button id="checkButton" onclick="tryAgain()">spróbuj jeszcze raz!</button>
+    </div>
+	<script>
+    function check() {
+      const answer = document.querySelector('#answer').value.toLowerCase();
+      if (answer.includes('imie') || answer.includes('imię')) {
+        win();
+      } else {
+        lost();
+      }
+    }
+    function openModal(modalSelector) {
+      document.querySelector(modalSelector).classList.add('modal-open');
+    }
+    function closeModal(modalSelector) {
+      document.querySelector(modalSelector).classList.remove('modal-open');
+    }
+    function win() {
+      openModal('#modalWin');
+    }
+    function lost() {
+      openModal('#modalLost');
+    }
+    function tryAgain() {
+      closeModal('#modalLost');
+    }
+  </script>
   </body>
 </html>
