--- a/dec24/index.html
+++ b/dec24/index.html
@@ -13,7 +13,7 @@
         body {
             margin: 0;
             padding: 0;
-            font-family: Gloria Hallelujah, sans-serif;
+            font-family: "Gloria Hallelujah", sans-serif;
         }
         main {
             position: relative;
@@ -43,15 +43,17 @@
         input {
           border: 0;
           background-color: transparent;
-          border-bottom: 1px solid #333;
+          border-bottom: 2px solid #333;
           color: #333;
+          text-align: center;
+          font-family: "Gloria Hallelujah", sans-serif;
         }
         button {
           border: 2px solid;
           background: transparent;
           color: inherit;
           border-radius: 0.5em;
-          font-family: "Gloria Hallelujah";
+          font-family: "Gloria Hallelujah", sans-serif;
           transition: transform .2s ease;
         }
         button:hover {
@@ -91,17 +93,17 @@
   </head>
   <body>
     <main>
-        <img class="panda" src="panda11.png" alt="panda" />
+        <img class="panda" src="panda0.png" alt="panda" />
         <span>Dzień dobry!</span><br />
         <span>
-          Czas już na ostatnią paczkę<br />
-          więc i finalną zagadkę!
+          Żeby dostać zawartość ostatni paczki musisz znaleźć odpowiedź na zagadkę poniżej.
         </span><br />
         <span>
-          "Co należy do Ciebie, ale inni ludzie używają tego częściej niż Ty?""
+          Co należy do Ciebie, ale inni ludzie używają tego częściej niż Ty?
         </span>
-        <label>Odpowiedź:
-          <input id="answer" type="text" />
+        <label>
+          <!-- Odpowiedź: -->
+          <input placeholder="odpowiedź" id="answer" type="text" />
         </label>
         <button id="checkButton" onclick="check()">Sprawdź</button>
     </main>
