--- a/dec24/index.html
+++ b/dec24/index.html
@@ -110,8 +110,8 @@
     <div id="modalWin" class="modal modal-win">
       <img class="panda" src="panda3.png" alt="panda" />
       <span>Gratulacje!</span>
-      <span>Poprawna odpowiedź!</span>
-      <span>Czas poszukać prezentu w...</span>
+      <span>Poprawna odpowiedź!</span><br />
+      <span>Ostatnie wyzwanie na drodze do prezentu przekaże Ci Michał!</span>
     </div>
     <div id="modalLost" class="modal modal-lost">
       <img class="panda" src="panda2.png" alt="panda" />
