add Kasia, update blocked pairs

--- a/christmas-lottery/index.html
+++ b/christmas-lottery/index.html
@@ -19,6 +19,18 @@
 	
 		<div id="participants" class="participants">
 			<div class="participant">
+				<input class="nameInput" type="text" value="Kasia"/>
+			</div>
+			<div class="participant">
+				<input class="nameInput" type="text" value="Sabina"/>
+			</div>
+			<div class="participant">
+				<input class="nameInput" type="text" value="Bożena"/>
+			</div>
+			<div class="participant">
+				<input class="nameInput" type="text" value="Maria"/>
+			</div>
+			<div class="participant">
 				<input class="nameInput" type="text" value="Marcin"/>
 			</div>
 			<div class="participant">
@@ -29,15 +41,6 @@
 			</div>
 			<div class="participant">
 				<input class="nameInput" type="text" value="Marek"/>
-			</div>
-			<div class="participant">
-				<input class="nameInput" type="text" value="Sabina"/>
-			</div>
-			<div class="participant">
-				<input class="nameInput" type="text" value="Bożena"/>
-			</div>
-			<div class="participant">
-				<input class="nameInput" type="text" value="Maria"/>
 			</div>
 		</div>  
 
