add polish title

--- a/christmas-lottery/index.html
+++ b/christmas-lottery/index.html
@@ -13,7 +13,7 @@
 
 <body>
 	<main class="main">
-		<h1 class="title">Christmas gifts secret draw 2022 edition<br>🎄🎅</h1>
+		<h1 class="title">Losowanie prezentów 2024<br>🎄🎅</h1>
 		<p>Insert names in inputs below:</p>
 		<!-- <small>*with special feature for Kasia 😊</small><br> -->
 	
