add more polish

--- a/christmas-lottery/index.html
+++ b/christmas-lottery/index.html
@@ -53,7 +53,7 @@
 		<div id="modal" class="modal">
 			<div class="modal__frame">
 				<div class="modal__content">
-					<span id="giftFrom" class="giftFrom"></span>gives a gift🎁 to <span id="giftTo" class="giftTo"></span>
+					<span id="giftFrom" class="giftFrom"></span>przygotuje prezent🎁 dla <span id="giftTo" class="giftTo"></span>
 				</div>
 			</div>
 		</div>
